Toggling "display: contents" to "display: none" fails to hide the element https://bugs.webkit.org/show_bug.cgi?id=188259 <rdar://problem/42886896>

Reviewed by Simon Fraser.

Source/WebCore:

Test: fast/css/display-contents-to-none.html

* style/StyleTreeResolver.cpp:
(WebCore::Style::affectsRenderedSubtree):

An element with 'display:contents' has a rendered subtree.

LayoutTests:

* fast/css/display-contents-to-none-expected.html: Added.
* fast/css/display-contents-to-none.html: Added.


Canonical link: https://commits.webkit.org/210499@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243444 268f45cc-cd09-0410-ab3c-d52691b4dbfc